--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "grunt-simple-ejs",
   "version": "0.0.0",
   "description": "process ejs template.",
-  "main": "index.js",
   "dependencies": {
-    "ejs": "~0.8.4"
+    "ejs": "~0.8.4",
+    "grunt": "~0.4.1"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "chai": "~1.7.2"
   },
-  "repository": "",
   "keywords": [
     "gruntplugin"
   ],
