--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "grunt": "~0.4.1"
   },
   "devDependencies": {
-    "chai": "~1.7.2"
+    "chai": "~1.7.2",
+    "grunt-release": "~0.6.0"
   },
   "keywords": [
     "gruntplugin"
